--- a/admin.html
+++ b/admin.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>SyBaga — админ-панель</title>
+  <title>habi-hogo — админ-панель</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --primary:#018610;
-      --primary-dark:#059669;
+      --primary:#ff1947;
+      --primary-dark:#960505;
       --primary-bg:#f5f3ff;
       --secondary:#10b981;
       --secondary-dark:#059669;
@@ -506,7 +506,7 @@
     <header class="app-header">
       <div class="logo">
         <div class="logo-icon"><i class="fas fa-gift"></i></div>
-        <span>SyBaga · Админ-панель</span>
+        <span>habi · Админ</span>
       </div>
       <div class="link-client">
         <a href="index.html">Перейти в кабинет гостя</a>
@@ -752,7 +752,7 @@
 
             <!-- Блок 3: Список всех подарков -->
             <h3 class="section-title">Каталог подарков</h3>
-            <p class="section-desc">Список всех активных и неактивных подарков SyBaga.</p>
+            <p class="section-desc">Список всех активных и неактивных подарков habi.</p>
             <div id="gifts-admin" class="gift-grid"></div>
           </section>
 
@@ -798,7 +798,7 @@
 
   <script>
     /* URL Apps Script */
-    const API_BASE = 'https://script.google.com/macros/s/AKfycbwtVhNoiosNdVcQ7QmHjjB1yQ-8fpxbGgURbSeWWg_VM8h3j1KGnSSw0l2UMTSfsNmI/exec';
+    const API_BASE = 'https://script.google.com/macros/s/AKfycbxkyjMArpTcCEOLR73rkllZGIAFPxddb9k3VuVpCic4pSFKEoJHn4_95BKb96u2QY6PqA/exec';
 
     const $ = s => document.querySelector(s);
     const $$ = s => document.querySelectorAll(s);
