--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>SyBaga — админ-панель</title>
+  <title>habi — админ</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -505,7 +505,7 @@
     <header class="app-header">
       <div class="logo">
         <div class="logo-icon"><i class="fas fa-gift"></i></div>
-        <span>SyBaga · Админ-панель</span>
+        <span>habi · Админ</span>
       </div>
       <div class="link-client">
         <a href="index.html">Перейти в кабинет гостя</a>
@@ -751,7 +751,7 @@
 
             <!-- Блок 3: Список всех подарков -->
             <h3 class="section-title">Каталог подарков</h3>
-            <p class="section-desc">Список всех активных и неактивных подарков SyBaga.</p>
+            <p class="section-desc">Список всех активных и неактивных подарков habi.</p>
             <div id="gifts-admin" class="gift-grid"></div>
           </section>
 
