--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>SyBaga — кабинет гостя</title>
+  <title>habi — кабинет гостя</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -262,7 +262,7 @@
     <header class="app-header">
       <div class="logo">
         <div class="logo-icon"><i class="fas fa-gift"></i></div>
-        <span>SyBaga</span>
+        <span>habi</span>
       </div>
       <div class="link-admin">
         <a href="admin.html">Вход для сотрудников</a>
@@ -271,7 +271,7 @@
 
     <section class="card">
       <h2 class="card-title">Личный кабинет гостя</h2>
-      <p class="card-subtitle">Введите номер телефона, который вы оставляли в ресторане SyBaga.</p>
+      <p class="card-subtitle">Введите номер телефона, который вы оставляли в ресторане habi.</p>
 
       <div class="form-group">
         <label class="form-label">Номер телефона</label>
