--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
     </section>
 
     <!-- РЕСТОРАН ТУРАЛЫ СЕКЦИЯ -->
-    <section class="about-section animate-on-scroll">
+    <!-- <section class="about-section animate-on-scroll">
       <div class="about-text-card">
         <div class="about-kicker">
           <i class="fas fa-circle"></i>
@@ -1201,7 +1201,7 @@
         </div>
       </div>
 
-      <!-- <div class="about-photos">
+      <div class="about-photos">
         <div class="about-photo-card big small-label" style="background-image:url('/img/habi-hall.jpg');">
           <div class="about-photo-badge">
             <i class="fas fa-star"></i>
@@ -1210,8 +1210,8 @@
         </div>
         <div class="about-photo-card table-label" style="background-image:url('/img/habi-table.jpg');"></div>
         <div class="about-photo-card bar-label" style="background-image:url('/img/habi-bar.jpg');"></div>
-      </div> -->
-    </section>
+      </div>
+    </section> -->
     
     <section class="card animate-on-scroll">
       <h2 class="card-title">Бонусыңызды тексеріңіз</h2>
