--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
       box-shadow: 0 10px 20px rgba(196, 30, 58, 0.2);
       transition: var(--transition);
     }
+
+    .logo-img img {
+      width: 60px;
+      height: 60px;
+    }
     
     .logo-img::after {
       content: '';
@@ -1141,7 +1146,7 @@
     <header class="app-header animate-on-scroll">
       <a href="#" class="restaurant-logo">
         <div class="logo-img">
-          <i class="fas fa-utensils"></i>
+          <img src="logo.png" alt="">
         </div>
         <div class="logo-text">
           <div class="logo-main">HABI</div>
