--- a/admin.html
+++ b/admin.html
@@ -68,8 +68,13 @@
       background:var(--primary);
       color:white;
       width:40px;height:40px;
-      border-radius:10px;
+      border-radius:50%;
       display:flex;align-items:center;justify-content:center;
+    }
+    .logo-icon img {
+      width:40px;height:40px;
+      border-radius:50%;
+
     }
     .link-client{
       font-size:13px;
@@ -504,7 +509,7 @@
   <div class="app-container">
     <header class="app-header">
       <div class="logo">
-        <div class="logo-icon"><i class="fas fa-gift"></i></div>
+        <div class="logo-icon"><img src="logo.png" alt=""></div>
         <span>habi · Админ</span>
       </div>
       <div class="link-client">
