--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@
             <i class="fas fa-map-marker-alt"></i>
           </div>
           <div class="contact-text">Мекенжай</div>
-          <div class="contact-detail">Алматы, (мекенжайды осында енгізуге болады)</div>
+          <div class="contact-detail">Алматы, Жунисова 137/31</div>
         </div>
         
         <div class="contact-item">
