--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@
             <i class="fas fa-map-marker-alt"></i>
           </div>
           <div class="contact-text">Мекенжай</div>
-          <div class="contact-detail">Алматы, Жунисова 137/31</div>
+          <div class="contact-detail"><a href="https://2gis.kz/almaty/geo/70000001104066859">2GIS </a>Алматы, Жунисова 137/31</div>
         </div>
         
         <div class="contact-item">
@@ -1302,7 +1302,7 @@
             <i class="fas fa-clock"></i>
           </div>
           <div class="contact-text">Жұмыс уақыты</div>
-          <div class="contact-detail">Күн сайын 12:00 – 00:00</div>
+          <div class="contact-detail">Күн сайын 10:00 – 23:00</div>
         </div>
       </div>
     </section>
