--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,8 @@
       --text:#1f2937;
       --text-light:#6b7280;
       --text-lighter:#9ca3af;
-      --bg:#f9fafb;
+
+      --bg: #fab0bf24; /* Таза ақ фон */
       --bg-card:#ffffff;
       --border:#e5e7eb;
       --border-light:#f3f4f6;
