--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
       <h1 class="hero-title"><span>Бонус жүйесі</span> — Habi Cafe & Hogo</h1>
       <p class="hero-subtitle">
         Бонус теңгеріміңізді көріңіз, сыйлықтарыңызды қадағалаңыз және эксклюзивті ұсыныстар алыңыз.
-        Біздің мейрамханаға келген кезде қалдырған телефон нөміріңізді енгізіңіз.
+        Біздің кафеге келген кезде қалдырған телефон нөміріңізді енгізіңіз.
       </p>
     </section>
 
@@ -1312,7 +1312,7 @@
       <p>+7 706 870 6666</p>
       
       <div class="footer-links">
-        <a href="#"><i class="fas fa-info-circle"></i> Мейрамхана туралы</a>
+        <a href="#"><i class="fas fa-info-circle"></i> Habi cafe туралы</a>
         <a href="#"><i class="fas fa-concierge-bell"></i> Меню</a>
         <a href="#"><i class="fas fa-calendar-alt"></i> Үстел брондау</a>
         <a href="#"><i class="fas fa-question-circle"></i> Көмек</a>
