--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
         </div>
         <div class="logo-text">
           <div class="logo-main">HABI</div>
-          <div class="logo-sub">CAFE / ХОГО</div>
+          <div class="logo-sub">CAFE & HOGO</div>
         </div>
       </a>
       
