--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
     </header>
     
     <section class="hero-section animate-on-scroll">
-      <h1 class="hero-title"><span>Бонус жүйесі</span> — Habi Cafe & Hogo</h1>
+      <h1 class="hero-title"><span>Бонус жүйесі</span> — Habi <br> Cafe & Hogo</h1>
       <p class="hero-subtitle">
         Бонус теңгеріміңізді көріңіз, сыйлықтарыңызды қадағалаңыз және эксклюзивті ұсыныстар алыңыз.
         Біздің кафеге келген кезде қалдырған телефон нөміріңізді енгізіңіз.
